adminer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: adminer
